deploy/serviceDeployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: springboot
  namespace: default
spec:
  selector:
    app: springboot
  ports:
      - port: 8443
  type: LoadBalancer
