deploy/k8sDeployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: $DEPLOY_NAME
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: $DEPLOY_NAME
    spec:
      containers:
      - name: $DEPLOY_NAME
        image: $DEPLOY_IMAGE
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.2"
          limits:
            cpu: "1"
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: $DEPLOY_NAME
spec:
  selector:
    app: $DEPLOY_NAME
  ports:
      - port: 8080
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: $DEPLOY_NAME
  name: $DEPLOY_NAME
  namespace: $K8S_NAMESPACE
spec:
  rules:
  - host: $DEPLOY_SERVICE_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $DEPLOY_NAME
          servicePort: 8080
